--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mongoose"
   , "description": "Mongoose MongoDB ODM"
-  , "version": "3.8.0"
+  , "version": "3.8.1"
   , "author": "Guillermo Rauch <guillermo@learnboost.com>"
   , "keywords": ["mongodb", "document", "model", "schema", "database", "odm", "data", "datastore", "query", "nosql", "orm", "db"]
   , "dependencies": {
@@ -14,6 +14,8 @@
       , "mpath": "0.1.1"
       , "regexp-clone": "0.0.1"
       , "mquery" : "0.3.2"
+      , "js-lib": "git+ssh://git@github.com:Vungle/js-lib.git"
+      , "winston" : "0.9.0"
     }
   , "devDependencies": {
         "mocha": "1.12.0"
